--- a/src/App.css
+++ b/src/App.css
@@ -28,4 +28,17 @@ body{
 
 }
 
+@media(max-width:768px){
+    .section-subtitle{
+        font-size: 1rem;
+    }
+    .section-title{
+        font-size: 1.8rem;
+    }
+}
+
+/* .container-fluid{
+    --bs-gutter-x: 0;
+} */
+
 
