--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,13 +1,20 @@
 .Footer-sec{
 background-color: #051c34 !important;
-padding-left: 5rem;
-padding-right: 5rem;
+padding-left: 3rem;
+padding-right: 3rem;
+width:100%;
+/* margin-right: 0 !important;
+margin-left: 0 !important; */
 color: #fff;
+}
+.Footer-sec .row{
+ --bs-guitter-x-: 0 !important;
+
 }
 .footer-logo , 
 .footer-links h3,
 .footer-followus h3{
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 .contact{
     margin-bottom: 1rem;
@@ -27,4 +34,10 @@ color: #fff;
 }
 .footer-followus ul img{
     font-size: 18px;
+}
+
+@media(min-width: 576px){
+    footer h5{
+        font-size: 1rem;
+    }
 }
